# talloc

./: .clang-format  CMakeLists.txt  README.md
include/talloc/: talloc.h  talloc_config.h
src/: heap.c  heap.h  pool.c  pool.h  ptr_tools.c  ptr_tools.h  talloc.c  tatomic.h  types.h  utils.c  utils.h  vector.c  vector.h
tests/: CMakeLists.txt  FindCheck.cmake  talloc_test.c
